# 2024-mini

./: .firebaserc  LICENSE  README.md  REPORT.md  Report.md  excercise02.py  excercise03(02).py  firebase.json  main(1).py  mini-project-cd412-default-rtdb-response-times-export.json  pyproject.toml
.github/workflows/: codeql.yml
app/: package-lock.json  package.json
app/src/: App.js  Login.js  Notes.js  firebaseConfig.js
assignment/: Readme.md  Report.md  exercise01-resp.md  exercise01.md  exercise02-resp.md  exercise02.md  exercise03-resp.md  exercise03.md  exercise_game.py  exercise_light.py  exercise_sound.py  mini-c686c-default-rtdb-user_2024_9_15_9_49_29-export.json  score-2021-1-1T0_10_8.json
doc/: console.md  micropython.md  photocell.md  rshell.md  thonny.md
examples/: internet_connect.py  wifi_scan.py
functions/: index.js  package-lock.json  package.json
mini_2024/: django_rest_test.py  exercise_game.py  exercise_light.py  exercise_sound.py
response-time-app/: package-lock.json  package.json
response-time-app/src/: App.js  firebase.js
response-time-app/src/components/: Dashboard.js  Login.js  NavBar.js  SignUp.js
